--- a/left.html
+++ b/left.html
@@ -7,7 +7,7 @@
 	<body bgcolor="#d0d0d0">
 		<big>
 		<ul>
-			<li><a href="ppq.html"target="_blank">首页</a></li><br/>
+			<li><a href="index.html"target="_blank">首页</a></li><br/>
 			<li><a href="xinxi.html"target="_blank">信息</a></li><br/>
 			<li><a href="http://www.27270.com/word/dongwushijie/"target="_blank">图片</a></li><br/>
 			<li><a href="https://music.163.com/#/user/home?id=1290542350"target="_blank">音乐</a></li><br/>
