--- a/left.html
+++ b/left.html
@@ -7,13 +7,13 @@
 	<body bgcolor="#d0d0d0">
 		<big>
 		<ul>
-			<li><a href="index.html"target="_blank">首页</a></li><br/>
-			<li><a href="ppq3.html"target="_blank">信息</a></li><br/>
-			<li><a href="http://www.win4000.com/"target="_blank">图片</a></li><br/>
-			<li><a href="https://music.163.com/#/user/home?id=1290542350"target="_blank">音乐</a></li><br/>
-			<li><a href="ppq1.html"target="_blank">资料</a></li><br/>
-			<li><a href="http://speed.qq.com/video3/"target="_blank">游戏</a></li><br/>
-			<li><a href="bottom.html"target="_blank">其他..</a></li><br/>
+			<li><a href="index.html"target="_blank"><font color="black"size="5">首页</font></a></li><br/>
+			<li><a href="ppq3.html"target="_blank"><font color="black"size="5">信息</font></a></li><br/>
+			<li><a href="http://www.win4000.com/"target="_blank"><font color="black"size="5">图片</font></a></li><br/>
+			<li><a href="https://music.163.com/#/user/home?id=1290542350"target="_blank"><font color="black"size="5">音乐</font></a></li><br/>
+			<li><a href="ppq1.html"target="_blank"><font color="black"size="5">资料</font>/a></li><br/>
+			<li><a href="http://speed.qq.com/video3/"target="_blank"><font color="black"size="5">游戏</font></a></li><br/>
+			<li><a href="bottom.html"target="_blank"><font color="black"size="5">其他..</font></a></li><br/>
 			
 		</ul>
 	    </big>
