--- a/right1.html
+++ b/right1.html
@@ -9,6 +9,6 @@
 			<source src="2.mp3" type="audio/mpeg">
 				<embed height="100"width="50"src="2.mp3">
 		</audio>
-		<center><h1><font color="white"face="KaiTi"><big>✎﹏皮皮琪的主页..</big></font></h1></center>
+		<center><h1><font color="white"face="KaiTi"><big>✎﹏我的的主页..</big></font></h1></center>
 	</body>
 </html>
