--- a/left.html
+++ b/left.html
@@ -11,7 +11,7 @@
 			<li><a href="ppq3.html"target="_blank"><font color="black"size="5">信息</font></a></li><br/>
 			<li><a href="http://www.win4000.com/"target="_blank"><font color="black"size="5">图片</font></a></li><br/>
 			<li><a href="https://music.163.com/#/user/home?id=1290542350"target="_blank"><font color="black"size="5">音乐</font></a></li><br/>
-			<li><a href="ppq1.html"target="_blank"><font color="black"size="5">资料</font></a></li><br/>
+			<li><a href="ppq1.html"target="_blank"><font color="black"size="5">资料</font><</li><br/>
 			<li><a href="http://speed.qq.com/video3/"target="_blank"><font color="black"size="5">游戏</font></a></li><br/>
 			<li><a href="bottom.html"target="_blank"><font color="black"size="5">其他..</font></a></li><br/> 
 			
