--- a/bottom.html
+++ b/bottom.html
@@ -5,6 +5,6 @@
 		<meta charset="UTF-8">
 	</head>
 	<body background="13.gif">
-		<center><h1><font color="green"size="4"><small>。</br>皮皮琪 。</small></font></h1></center>
+		<center><h1><font color="green"size="4"><small>。</br></small></font></h1></center>
 	</body>
 </html>
